B1-20181215-17-Start use ModleForm

--- a/A_dbms/templates/dbms/agree/agree/table.html
+++ b/A_dbms/templates/dbms/agree/agree/table.html
@@ -25,7 +25,7 @@
                         {{ agree.agree_num }}
                     </a>
                 </td>
-                <td>{{ agree.article.custom.name }}</td>
+                <td>{{ agree.lending.summary.custom }}</td>
                 <td>{{ agree.branch.name }}</td>
                 <td>{{ agree.agree_amount }}</td>
                 <td>{{ agree.get_agree_typ_display }}</td>
