--- a/A_dbms/templates/dbms/agree/modl/mod_form/agree-add-edit.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/agree-add-edit.html
@@ -1,70 +1,70 @@
 <div class="form-group"><!--项目id-->
-    <label for="id_article_id" class="col-sm-3 control-label">
-        {{ form.article_id.label }}：
+    <label for="id_lending" class="col-sm-3 control-label">
+        {{ form_agree_add.lending.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.article_id }}
+        {{ form_agree_add.lending }}
     </div>
-    <label id="e_article_id" class="pull-right">
-        {{ forme.article_id.errors }}
+    <label id="e_lending" class="pull-right">
+        {{ form_agree_add.lending.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--银行id-->
-    <label for="id_branch_id" class="col-sm-3 control-label">
-        {{ form.branch_id.label }}：
+    <label for="id_branch" class="col-sm-3 control-label">
+        {{ form_agree_add.branch.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.branch_id }}
+        {{ form_agree_add.branch }}
     </div>
-    <label id="e_branch_id" class="pull-right">
-        {{ forme.branch_id.errors }}
+    <label id="e_branch" class="pull-right">
+        {{ form_agree_add.branch.errors }}
     </label>
 </div>
 
 
 <div class="form-group"><!--合同类型-->
     <label for="id_agree_typ" class="col-sm-3 control-label">
-        {{ form.agree_typ.label }}：
+        {{ form_agree_add.agree_typ.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.agree_typ }}
+        {{ form_agree_add.agree_typ }}
     </div>
     <label id="e_agree_typ" class="pull-right">
-        {{ forme.agree_typ.errors }}
+        {{ form_agree_add.agree_typ.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--合同金额-->
     <label for="id_agree_amount" class="col-sm-3 control-label">
-        {{ form.agree_amount.label }}：
+        {{ form_agree_add.agree_amount.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.agree_amount }}
+        {{ form_agree_add.agree_amount }}
     </div>
     <label id="e_agree_amount" class="pull-right">
-        {{ forme.agree_amount.errors }}
+        {{ form_agree_add.agree_amount.errors }}
     </label>
 </div>
 <div class="form-group"><!--类型数量-->
     <label for="id_guarantee_typ" class="col-sm-3 control-label">
-        {{ form.guarantee_typ.label }}：
+        {{ form_agree_add.guarantee_typ.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.guarantee_typ }}
+        {{ form_agree_add.guarantee_typ }}
     </div>
     <label id="e_guarantee_typ" class="pull-right">
-        {{ forme.guarantee_typ.errors }}
+        {{ form_agree_add.guarantee_typ.errors }}
     </label>
 </div>
 <div class="form-group"><!--合同份数-->
     <label for="id_agree_copies" class="col-sm-3 control-label">
-        {{ form.agree_copies.label }}：
+        {{ form_agree_add.agree_copies.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.agree_copies }}
+        {{ form_agree_add.agree_copies }}
     </div>
     <label id="e_agree_copies" class="pull-right">
-        {{ forme.agree_copies.errors }}
+        {{ form_agree_add.agree_copies.errors }}
     </label>
 </div>
