--- a/A_dbms/templates/dbms/article/scan/tab/present.html
+++ b/A_dbms/templates/dbms/article/scan/tab/present.html
@@ -41,6 +41,17 @@
         </a>
     </li>
 
+    <li role="presentation">
+        <a href="#lenging"
+           style="background-color: #f5f5f5"
+           aria-controls="settings"
+           role="tab"
+           data-toggle="tab">
+            分笔发放
+        </a>
+    </li>
+
+
     <li role="presentation"
         class="active">
         <a href="#agree"
