--- a/A_dbms/templates/dbms/article/scan/tab/content.html
+++ b/A_dbms/templates/dbms/article/scan/tab/content.html
@@ -1,5 +1,5 @@
 <div class="tab-content">
-        <div role="tabpanel"
+    <div role="tabpanel"
          class="tab-pane"
          id="feedback"> <!--反馈结论-->
         {% include 'dbms/article/scan/tab/content/feedback.html' %}
@@ -10,18 +10,25 @@
          id="meeting"> <!--评审会-->
         {% include 'dbms/article/scan/tab/content/meeting.html' %}
     </div>
+
     <div role="tabpanel"
          class="tab-pane"
          id="comment"> <!--评审意见-->
         {% include 'dbms/article/scan/tab/content/comment.html' %}
-
     </div>
+
     <div role="tabpanel"
          class="tab-pane"
          id="single"> <!--单项额度-->
         {% include 'dbms/article/scan/tab/content/single.html' %}
-
     </div>
+
+    <div role="tabpanel"
+         class="tab-pane"
+         id="lenging"> <!--分笔发放-->
+        {% include 'dbms/article/scan/tab/content/lending.html' %}
+    </div>
+
     <div role="tabpanel"
          class="tab-pane active"
          id="agree"> <!--委托合同-->
