--- a/A_dbms/templates/dbms/custome/custome/table.html
+++ b/A_dbms/templates/dbms/custome/custome/table.html
@@ -18,21 +18,21 @@
         </tr>
         </thead>
         <tbody>
-        {% for agree in p_list %}
-            <tr>
-                <td>
-                    <a href="{% url 'dbms:agree_scan' agree_id=agree.id %}">
-                        {{ agree.agree_num }}
-                    </a>
-                </td>
-                <td>{{ agree.lending.summary.custom }}</td>
-                <td>{{ agree.branch.name }}</td>
-                <td>{{ agree.agree_amount }}</td>
-                <td>{{ agree.get_agree_typ_display }}</td>
-                <td>{{ agree.lending.summary.summary_num }}</td>
-                <td>{{ agree.get_agree_state_display }}</td>
-            </tr>
-        {% endfor %}
+{#        {% for agree in p_list %}#}
+{#            <tr>#}
+{#                <td>#}
+{#                    <a href="{% url 'dbms:agree_scan' agree_id=agree.id %}">#}
+{#                        {{ agree.agree_num }}#}
+{#                    </a>#}
+{#                </td>#}
+{#                <td>{{ agree.lending.summary.custom }}</td>#}
+{#                <td>{{ agree.branch.name }}</td>#}
+{#                <td>{{ agree.agree_amount }}</td>#}
+{#                <td>{{ agree.get_agree_typ_display }}</td>#}
+{#                <td>{{ agree.lending.summary.summary_num }}</td>#}
+{#                <td>{{ agree.get_agree_state_display }}</td>#}
+{#            </tr>#}
+{#        {% endfor %}#}
         </tbody>
     </table>
 
