--- a/A_dbms/templates/dbms/article/scan/tab/content/agree.html
+++ b/A_dbms/templates/dbms/article/scan/tab/content/agree.html
@@ -13,36 +13,41 @@
             <th>合同种类</th>
             <th>金额</th>
             <th>合同状态</th>
+            <th>分次额度</th>
             <th>应收保费</th>
             <th>放款余额</th>
         </tr>
         </thead>
         <tbody>
-        {% for agree in article_obj.agree_article.all %}
-            <tr>
-                {% if agree_id %}
-                    {% if agree_id == agree.id %}
-                        <td><a class="active"
-                               href="{% url 'dbms:article_scan_agree' article_id=article_obj.id agree_id=agree.id %}">
-                            {{ agree.agree_num }}*
-                        </a></td>
+        {% for lending in article_obj.lending_summary.all %}
+            {% for agree in lending.agree_lending.all %}
+                <tr>
+                    {% if agree_id %}
+                        {% if agree_id == agree.id %}
+                            <td><a class="active"
+                                   href="{% url 'dbms:article_scan_agree' article_id=article_obj.id agree_id=agree.id %}">
+                                {{ agree.agree_num }}*
+                            </a></td>
+                        {% else %}
+                            <td>
+                                <a href="{% url 'dbms:article_scan_agree' article_id=article_obj.id agree_id=agree.id %}">
+                                    {{ agree.agree_num }}
+                                </a></td>
+                        {% endif %}
                     {% else %}
                         <td><a href="{% url 'dbms:article_scan_agree' article_id=article_obj.id agree_id=agree.id %}">
                             {{ agree.agree_num }}
                         </a></td>
                     {% endif %}
-                {% else %}
-                    <td><a href="{% url 'dbms:article_scan_agree' article_id=article_obj.id agree_id=agree.id %}">
-                        {{ agree.agree_num }}
-                    </a></td>
-                {% endif %}
-                <td>{{ agree.branch }}</td>
-                <td>{{ agree.get_agree_typ_display }}</td>
-                <td>{{ agree.agree_amount }}</td>
-                <td>{{ agree.get_agree_state_display }}</td>
-                <td>{{ agree.charge }}</td>
-                <td>{{ agree.agree_balance }}</td>
-            </tr>
+                    <td>{{ agree.branch }}</td>
+                    <td>{{ agree.get_agree_typ_display }}</td>
+                    <td>{{ agree.agree_amount }}</td>
+                    <td>{{ agree.get_agree_state_display }}</td>
+                    <td>{{ agree.lending.get_order_display }}</td>
+                    <td>{{ agree.charge }}</td>
+                    <td>{{ agree.agree_balance }}</td>
+                </tr>
+            {% endfor %}
         {% endfor %}
         </tbody>
     </table>
