--- a/A_dbms/templates/dbms/warrant/ground/filter.html
+++ b/A_dbms/templates/dbms/warrant/ground/filter.html
@@ -33,8 +33,8 @@
         </form>
     </label>
     <label class="pull-right">
-        <a class="btn btn-primary btn-sm" id="addHouse">
-            添加房产
+        <a class="btn btn-primary btn-sm" id="addGround">
+            添加土地
         </a>
     </label>
 </div>
