--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-add-edit.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-add-edit.html
@@ -1,4 +1,5 @@
-<div>
+<div id="from_counter">
+
     <div class="form-group"><!--委托合同id-->
         <label for="id_agree_id" class="col-sm-3 control-label">
             {{ from_counter.agree_id.label }}：
@@ -22,5 +23,6 @@
             {{ from_counter.counter_typ.errors }}
         </label>
     </div>
+
 </div>
 
