--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-ground.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-ground.html
@@ -1,4 +1,4 @@
-<div id="counter-ground" class="extned" style="display: none">
+<div id="form_counter_ground" class="extend" style="display: none">
     <div class="form-group"><!--抵押房产-->
         <label for="id_ground" class="col-sm-3 control-label">
             {{ form_counter_ground.ground.label }}：
