--- a/A_dbms/templates/dbms/board/layout.html
+++ b/A_dbms/templates/dbms/board/layout.html
@@ -54,7 +54,7 @@
             <p><a target=_blank href="#">追偿管理</a></p>
             <p><a target=_blank href="{% url 'dbms:industry' %}">行业管理</a></p>
             <p><a target=_blank href="{% url 'dbms:district' %}">区域管理</a></p>
-            <p><a target=_blank href="{% url 'dbms:custome' %}">客户管理</a></p>
+            <p><a target=_blank href="{% url 'dbms:custom' %}">客户管理</a></p>
             <p><a target=_blank href="#">房产管理</a></p>
             <p><a target=_blank href="#">报表系统</a></p>
         </div>
