--- a/A_dbms/templates/dbms/meeting/modl/mod_form/expert-allot.html
+++ b/A_dbms/templates/dbms/meeting/modl/mod_form/expert-allot.html
@@ -1,11 +1,15 @@
-<div class="form-group"><!--评委-->
-    <label for="id_expert" class="col-sm-3 control-label">
-        {{ form_allot_expert.expert.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ form_allot_expert.expert }}
+<div id="form_allot_expert">
+
+    <div class="form-group"><!--评委-->
+        <label for="id_expert" class="col-sm-3 control-label">
+            {{ form_allot_expert.expert.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_allot_expert.expert }}
+        </div>
+        <label id="e_expert" class="pull-right">
+            {{ form_allot_expert.expert.errors }}
+        </label>
     </div>
-    <label id="e_expert" class="pull-right">
-        {{ form_allot_expert.expert.errors }}
-    </label>
+
 </div>
