--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-assure-p.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-assure-p.html
@@ -1,4 +1,4 @@
-<div id="counter-assure-p" class="extned" style="display: none">
+<div id="form_counter_assure_p" class="extend" style="display: none">
     <div class="form-group"><!--企业保证人-->
         <label for="id_custome_p" class="col-sm-3 control-label">
             {{ form_counter_assure_p.custome_p.label }}：
