--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-house.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-house.html
@@ -1,4 +1,4 @@
-<div id="counter-house" class="extned" style="display: none">
+<div id="form_counter_house" class="extend" style="display: none">
     <div class="form-group"><!--企业保证人-->
         <label for="id_house" class="col-sm-3 control-label">
             {{ form_counter_house.house.label }}：
