--- a/A_dbms/templates/dbms/article/modl/mod_form/article-add-edit.html
+++ b/A_dbms/templates/dbms/article/modl/mod_form/article-add-edit.html
@@ -1,83 +1,86 @@
-<div class="form-group"><!--项目id-->
-    <label for="id_custom_id" class="col-sm-3 control-label">
-        {{ form_article.custom_id.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ form_article.custom_id }}
-    </div>
-    <label id="e_custom_id" class="pull-right">
-        {{ form_article.custom_id.errors }}
-    </label>
-</div>
+<div id="form_article_add_edit">
 
-<div class="form-group"><!--续贷金额-->
-    <label for="id_renewal" class="col-sm-3 control-label">
-        {{ form_article.renewal.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ form_article.renewal }}
+    <div class="form-group"><!--项目id-->
+        <label for="id_custom_id" class="col-sm-3 control-label">
+            {{ form_article_add_edit.custom_id.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_article_add_edit.custom_id }}
+        </div>
+        <label id="e_custom_id" class="pull-right">
+            {{ form_article_add_edit.custom_id.errors }}
+        </label>
     </div>
-    <label id="e_renewal" class="pull-right">
-        {{ form_article.renewal.errors }}
-    </label>
-</div>
 
-<div class="form-group"><!--新增金额-->
-    <label for="id_augment" class="col-sm-3 control-label">
-        {{ form_article.augment.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ form_article.augment }}
+    <div class="form-group"><!--续贷金额-->
+        <label for="id_renewal" class="col-sm-3 control-label">
+            {{ form_article_add_edit.renewal.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_article_add_edit.renewal }}
+        </div>
+        <label id="e_renewal" class="pull-right">
+            {{ form_article_add_edit.renewal.errors }}
+        </label>
     </div>
-    <label id="e_augment" class="pull-right">
-        {{ form_article.augment.errors }}
-    </label>
-</div>
 
-<div class="form-group"><!--授信期限-->
-    <label for="id_credit_term" class="col-sm-3 control-label">
-        {{ form_article.credit_term.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ form_article.credit_term }}
+    <div class="form-group"><!--新增金额-->
+        <label for="id_augment" class="col-sm-3 control-label">
+            {{ form_article_add_edit.augment.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_article_add_edit.augment }}
+        </div>
+        <label id="e_augment" class="pull-right">
+            {{ form_article_add_edit.augment.errors }}
+        </label>
     </div>
-    <label id="e_credit_term" class="pull-right">
-        {{ form_article.credit_term.errors }}
-    </label>
-</div>
 
-<div class="form-group"><!--项目经理id-->
-    <label for="id_director_id" class="col-sm-3 control-label">
-        {{ form_article.director_id.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ form_article.director_id }}
+    <div class="form-group"><!--授信期限-->
+        <label for="id_credit_term" class="col-sm-3 control-label">
+            {{ form_article_add_edit.credit_term.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_article_add_edit.credit_term }}
+        </div>
+        <label id="e_credit_term" class="pull-right">
+            {{ form_article_add_edit.credit_term.errors }}
+        </label>
     </div>
-    <label id="e_director_id" class="pull-right">
-        {{ form_article.director_id.errors }}
-    </label>
-</div>
 
-<div class="form-group"><!--项目助理id-->
-    <label for="id_assistant_id" class="col-sm-3 control-label">
-        {{ form_article.assistant_id.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ form_article.assistant_id }}
+    <div class="form-group"><!--项目经理id-->
+        <label for="id_director_id" class="col-sm-3 control-label">
+            {{ form_article_add_edit.director_id.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_article_add_edit.director_id }}
+        </div>
+        <label id="e_director_id" class="pull-right">
+            {{ form_article_add_edit.director_id.errors }}
+        </label>
     </div>
-    <label id="e_assistant_id" class="pull-right">
-        {{ form_article.assistant_id.errors }}
-    </label>
-</div>
 
-<div class="form-group"><!--风控专员id-->
-    <label for="id_control_id" class="col-sm-3 control-label">
-        {{ form_article.control_id.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ form_article.control_id }}
+    <div class="form-group"><!--项目助理id-->
+        <label for="id_assistant_id" class="col-sm-3 control-label">
+            {{ form_article_add_edit.assistant_id.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_article_add_edit.assistant_id }}
+        </div>
+        <label id="e_assistant_id" class="pull-right">
+            {{ form_article_add_edit.assistant_id.errors }}
+        </label>
     </div>
-    <label id="e_control_id" class="pull-right">
-        {{ form_article.control_id.errors }}
-    </label>
+
+    <div class="form-group"><!--风控专员id-->
+        <label for="id_control_id" class="col-sm-3 control-label">
+            {{ form_article_add_edit.control_id.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_article_add_edit.control_id }}
+        </div>
+        <label id="e_control_id" class="pull-right">
+            {{ form_article_add_edit.control_id.errors }}
+        </label>
+    </div>
 </div>
