--- a/A_dbms/templates/dbms/meeting/modl/mod_form/meeting-add.html
+++ b/A_dbms/templates/dbms/meeting/modl/mod_form/meeting-add.html
@@ -1,35 +1,39 @@
-<div class="form-group"> <!--评审类型-->
-    <label for="id_review_model" class="col-sm-3 control-label">
-        {{ meeting_add_form.review_model.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ meeting_add_form.review_model }}
-    </div>
-    <label id="e_review_model" class="pull-right">
-        {{ meeting_add_form.review_model.errors }}
-    </label>
-</div>
+<div id="form_meeting_add">
 
-<div class="form-group"><!--评审日期-->
-    <label for="id_review_date" class="col-sm-3 control-label">
-        {{ meeting_add_form.review_date.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ meeting_add_form.review_date }}
+    <div class="form-group"> <!--评审类型-->
+        <label for="id_review_model" class="col-sm-3 control-label">
+            {{ form_meeting_add.review_model.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_meeting_add.review_model }}
+        </div>
+        <label id="e_review_model" class="pull-right">
+            {{ form_meeting_add.review_model.errors }}
+        </label>
     </div>
-    <label id="e_review_date" class="pull-right">
-        {{ meeting_add_form.review_date.errors }}
-    </label>
-</div>
 
-<div class="form-group"><!--参会项目-->
-    <label for="id_article" class="col-sm-3 control-label">
-        {{ meeting_add_form.article.label }}：
-    </label>
-    <div class="col-sm-9">
-        {{ meeting_add_form.article }}
+    <div class="form-group"><!--评审日期-->
+        <label for="id_review_date" class="col-sm-3 control-label">
+            {{ form_meeting_add.review_date.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_meeting_add.review_date }}
+        </div>
+        <label id="e_review_date" class="pull-right">
+            {{ form_meeting_add.review_date.errors }}
+        </label>
     </div>
-    <label id="e_article" class="pull-right">
-        {{ meeting_add_form.article.errors }}
-    </label>
+
+    <div class="form-group"><!--参评项目-->
+        <label for="id_article" class="col-sm-3 control-label">
+            {{ form_meeting_add.article.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_meeting_add.article }}
+        </div>
+        <label id="e_article" class="pull-right">
+            {{ form_meeting_add.article.errors }}
+        </label>
+    </div>
+
 </div>
