--- a/A_dbms/templates/dbms/custom/custom-scan.html
+++ b/A_dbms/templates/dbms/custom/custom-scan.html
@@ -7,11 +7,13 @@
         {% include 'dbms/custom/scan/custom-summry.html' %}
         {% include 'dbms/custom/scan/custom-tab.html' %}
         {% include 'dbms/custom/modl/custom-del-mod.html' %}
+        {% include 'dbms/custom/modl/custom-edit-mod.html' %}
 
     </div>
 {% endblock %}
 
 {% block extra-js %}
     {% include 'dbms/custom/extra/js-custom-del.html' %}
+    {% include 'dbms/custom/extra/js-custom-edit.html' %}
 
 {% endblock %}
