--- a/A_dbms/templates/dbms/custom/extra/js-custom-edit.html
+++ b/A_dbms/templates/dbms/custom/extra/js-custom-edit.html
@@ -1,42 +1,20 @@
 <script>
     $(function () {
-        bindAddCustom();
-        bind_id_genre();
+        bindEditCustom();
         bindAddCounterModalOk();
     });
 
-    function bindAddCustom() {
-        $('#addCustom').click(function () {
+    function bindEditCustom() {
+        $('#editCustom').click(function () {
             {#console.log("bindAddCounterB")#}
-            $('#addCustomModal').modal('show');
-        })
-    }
-
-    function bind_id_genre() {
-        $('#id_genre').change(function () {
-            console.log("bind_id_genre");
-            $('.extend').hide();
-            var selected_genre = $('#id_genre').val();
-
-            console.log(selected_genre);
-
-            switch (selected_genre) {
-                case ('1'):
-                    $('#form_custom_c_add').show();
-                    break;
-                case ('2'):
-                    $('#form_custom_p_add').show();
-                    break;
-                default:
-                    $('.extend').hide()
-            }
+            $('#editCustomModal').modal('show');
         })
     }
 
     function bindAddCounterModalOk() {
-        $('#addCustomModalOk').click(function () {
+        $('#editCustomModalOk').click(function () {
             var postData = {};
-            $('#addCustomModal').find('input,select').each(function () {
+            $('#editCustomModal').find('input,select').each(function () {
                 var v = $(this).val();
                 var n = $(this).attr('name');
                 postData[n] = v;
@@ -46,14 +24,14 @@
             console.log(postDataStr);
 
             $.ajax({
-                url: '/dbms/custom/add/',
+                url: '/dbms/custom/edit/',
                 type: 'POST',
                 data: {'postDataStr': postDataStr},
                 dataType: 'JSON',
                 success: function (arg) {
                     console.log(arg);
                     if (arg.status) {
-                        $('#addCustomModal').modal('hide');
+                        $('#editCustomModal').modal('hide');
                         alert(arg.message);
                         window.location.reload();
                     } else {
@@ -64,7 +42,6 @@
                         $('#e_contact_num').text(arg.forme.contact_num);
                         $('#e_idustry').text(arg.forme.idustry);
                         $('#e_district').text(arg.forme.district);
-                        $('#e_genre').text(arg.forme.genre);
                         $('#e_short_name').text(arg.forme.short_name);
                         $('#e_capital').text(arg.forme.capital);
                         $('#e_registered_addr').text(arg.forme.registered_addr);
