--- a/A_dbms/templates/dbms/custom/scan/tab/custom-content.html
+++ b/A_dbms/templates/dbms/custom/scan/tab/custom-content.html
@@ -2,25 +2,25 @@
     <div role="tabpanel"
          class="tab-pane"
          id="contact_way"> <!--联系方式-->
-        {% include 'dbms/custom/scan/tab/content/feedback.html' %}
+        {% include 'dbms/custom/scan/tab/content/contact_way.html' %}
     </div>
 
     <div role="tabpanel"
          class="tab-pane"
          id="business_information"> <!--工商信息-->
-        {% include 'dbms/custom/scan/tab/content/meeting.html' %}
+        {% include 'dbms/custom/scan/tab/content/business_information.html' %}
     </div>
 
-    <div role="tabpanel"
-         class="tab-pane"
-         id="credit_situation"> <!--授信情况-->
-        {% include 'dbms/custom/scan/tab/content/comment.html' %}
-    </div>
+{#    <div role="tabpanel"#}
+{#         class="tab-pane"#}
+{#         id="credit_situation"> <!--授信情况-->#}
+{#        {% include 'dbms/custom/scan/tab/content/credit_situation.html' %}#}
+{#    </div>#}
 
     <div role="tabpanel"
          class="tab-pane active"
          id="project_status"> <!--项目情况-->
-        {% include 'dbms/custom/scan/tab/content/single.html' %}
+        {% include 'dbms/custom/scan/tab/content/project_status.html' %}
     </div>
 
 </div>
