--- a/A_dbms/templates/dbms/meeting/article/summry.html
+++ b/A_dbms/templates/dbms/meeting/article/summry.html
@@ -9,8 +9,11 @@
             </a><!--#path('meeting/allot_ajax/'-->
             <a class="btn btn-primary btn-sm " id="singleQuota">
                 单项额度
-            </a> <!--#path('meeting/single/'-->
-             <a class="btn btn-primary btn-sm " id="articleSignB">
+            </a> <!--#path('meeting/lending/'-->
+            <a class="btn btn-primary btn-sm " id="lendingOrder">
+                放款次序
+            </a> <!--#path('meeting/lending/'-->
+            <a class="btn btn-primary btn-sm " id="articleSignB">
                 项目签批
             </a> <!--#path('meeting/article/sign/'-->
         </label>
