--- a/A_dbms/templates/dbms/meeting/extra/js-meeting-close.html
+++ b/A_dbms/templates/dbms/meeting/extra/js-meeting-close.html
@@ -31,7 +31,7 @@
                     if (dict.status) {
                         $('#closeMeetingModal').modal('hide');
                         alert(dict.message);
-                        window.location.href = "/dbms/meeting/";
+                        window.location.reload();
                     } else {
                         $('#closeMeetingModal').modal('hide');
                         alert(dict.message);
