--- a/A_dbms/templates/dbms/meeting/meeting-article.html
+++ b/A_dbms/templates/dbms/meeting/meeting-article.html
@@ -12,6 +12,7 @@
         {% include 'dbms/meeting/modl/comment-add-mod.html' %}
         {% include 'dbms/meeting/modl/single-add-mod.html' %}
         {% include 'dbms/meeting/modl/single-del-mod.html' %}
+        {% include 'dbms/meeting/modl/lending-add-mod.html' %}
         {% include 'dbms/meeting/modl/article-sign-mod.html' %}
     </div>
 
@@ -22,5 +23,6 @@
     {% include 'dbms/meeting/extra/js-comment-add.html' %}
     {% include 'dbms/meeting/extra/js-single-add.html' %}
     {% include 'dbms/meeting/extra/js-single-del.html' %}
+    {% include 'dbms/meeting/extra/js-lending-add.html' %}
     {% include 'dbms/meeting/extra/js-article-sign.html' %}
 {% endblock %}
