--- a/A_dbms/templates/dbms/custom/scan/tab/content/business_information.html
+++ b/A_dbms/templates/dbms/custom/scan/tab/content/business_information.html
@@ -8,19 +8,17 @@
         {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
-            <th>评委委员</th>
-            <th>评委意见</th>
-            <th>意见详情</th>
+            <th>注册资本(万)</th>
+            <th>注册地址</th>
+            <th>法人代表</th>
         </tr>
         </thead>
         <tbody>
-        {% for comment in article_obj.comment_summary.all %}
-            <tr>
-                <td>{{ comment.expert }}</td>
-                <td>{{ comment.get_comment_type_display }}</td>
-                <td>{{ comment.concrete }}</td>
-            <tr>
-        {% endfor %}
+        <tr>
+            <td>{{ custom_obj.company_custome.capital }}</td>
+            <td>{{ custom_obj.company_custome.registered_addr }}</td>
+            <td>{{ custom_obj.company_custome.representative }}</td>
+        </tr>
         </tbody>
     </table>
 </div>
