--- a/A_dbms/templates/dbms/custom/scan/tab/content/contact_way.html
+++ b/A_dbms/templates/dbms/custom/scan/tab/content/contact_way.html
@@ -8,21 +8,17 @@
         {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
-            <th>授信类型</th>
-            <th>授信额度（元）</th>
-            <th>费率（%）</th>
-            <th>放款金额</th>
+            <th>联系地址</th>
+            <th>联系人</th>
+            <th>联系电话</th>
         </tr>
         </thead>
         <tbody>
-        {% for single in article_obj.single_quota_summary.all %}
-            <tr>
-                <td>{{ single.get_credit_model_display }}</td>
-                <td>{{ single.credit_amount }}</td>
-                <td>{{ single.flow_rate }}</td>
-                <td>{{ single.amount }}</td>
-            <tr>
-        {% endfor %}
+        <tr>
+            <td>{{ custom_obj.contact_addr }}</td>
+            <td>{{ custom_obj.linkman }}</td>
+            <td>{{ custom_obj.contact_num }}</td>
+        </tr>
         </tbody>
     </table>
 </div>
