--- a/A_dbms/templates/dbms/custom/scan/tab/custom-present.html
+++ b/A_dbms/templates/dbms/custom/scan/tab/custom-present.html
@@ -20,15 +20,15 @@
         </a>
     </li>
 
-    <li role="presentation">
-        <a href="#credit_situation"
-           style="background-color: #f5f5f5"
-           aria-controls="settings"
-           role="tab"
-           data-toggle="tab">
-            授信情况
-        </a>
-    </li>
+{#    <li role="presentation">#}
+{#        <a href="#credit_situation"#}
+{#           style="background-color: #f5f5f5"#}
+{#           aria-controls="settings"#}
+{#           role="tab"#}
+{#           data-toggle="tab">#}
+{#            授信情况#}
+{#        </a>#}
+{#    </li>#}
 
     <li role="presentation" class="active">
         <a href="#project_status"
